--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1087,58 +1087,58 @@
 %    \end{macrocode}
 % Primitives from \pTeX{}.
 %    \begin{macrocode}
-  \@@_primitive:NN \autospacing           \ptex_autospacing:D
-  \@@_primitive:NN \autoxspacing          \ptex_autoxspacing:D
-  \@@_primitive:NN \dtou                  \ptex_dtou:D
-  \@@_primitive:NN \epTeXinputencoding    \ptex_inputencoding:D
-  \@@_primitive:NN \epTeXversion          \ptex_epTeXversion:D
-  \@@_primitive:NN \euc                   \ptex_euc:D
-  \@@_primitive:NN \ifdbox                \ptex_ifdbox:D
-  \@@_primitive:NN \ifddir                \ptex_ifddir:D
-  \@@_primitive:NN \ifmdir                \ptex_ifmdir:D
-  \@@_primitive:NN \iftbox                \ptex_iftbox:D
-  \@@_primitive:NN \iftdir                \ptex_iftdir:D
-  \@@_primitive:NN \ifybox                \ptex_ifybox:D
-  \@@_primitive:NN \ifydir                \ptex_ifydir:D
-  \@@_primitive:NN \inhibitglue           \ptex_inhibitglue:D
-  \@@_primitive:NN \inhibitxspcode        \ptex_inhibitxspcode:D
-  \@@_primitive:NN \jcharwidowpenalty     \ptex_jcharwidowpenalty:D
-  \@@_primitive:NN \jfam                  \ptex_jfam:D
-  \@@_primitive:NN \jfont                 \ptex_jfont:D
-  \@@_primitive:NN \jis                   \ptex_jis:D
-  \@@_primitive:NN \kanjiskip             \ptex_kanjiskip:D
-  \@@_primitive:NN \kansuji               \ptex_kansuji:D
-  \@@_primitive:NN \kansujichar           \ptex_kansujichar:D
-  \@@_primitive:NN \kcatcode              \ptex_kcatcode:D
-  \@@_primitive:NN \kuten                 \ptex_kuten:D
-  \@@_primitive:NN \noautospacing         \ptex_noautospacing:D
-  \@@_primitive:NN \noautoxspacing        \ptex_noautoxspacing:D
-  \@@_primitive:NN \postbreakpenalty      \ptex_postbreakpenalty:D
-  \@@_primitive:NN \prebreakpenalty       \ptex_prebreakpenalty:D
-  \@@_primitive:NN \ptexminorversion      \ptex_ptexminorversion:D
-  \@@_primitive:NN \ptexrevision          \ptex_ptexrevision:D
-  \@@_primitive:NN \ptexversion           \ptex_ptexversion:D
-  \@@_primitive:NN \showmode              \ptex_showmode:D
-  \@@_primitive:NN \sjis                  \ptex_sjis:D
-  \@@_primitive:NN \tate                  \ptex_tate:D
-  \@@_primitive:NN \tbaselineshift        \ptex_tbaselineshift:D
-  \@@_primitive:NN \tfont                 \ptex_tfont:D
-  \@@_primitive:NN \xkanjiskip            \ptex_xkanjiskip:D
-  \@@_primitive:NN \xspcode               \ptex_xspcode:D
-  \@@_primitive:NN \ybaselineshift        \ptex_ybaselineshift:D
-  \@@_primitive:NN \yoko                  \ptex_yoko:D
+  \@@_primitive:NN \autospacing           \tex_autospacing:D
+  \@@_primitive:NN \autoxspacing          \tex_autoxspacing:D
+  \@@_primitive:NN \dtou                  \tex_dtou:D
+  \@@_primitive:NN \epTeXinputencoding    \tex_inputencoding:D
+  \@@_primitive:NN \epTeXversion          \tex_epTeXversion:D
+  \@@_primitive:NN \euc                   \tex_euc:D
+  \@@_primitive:NN \ifdbox                \tex_ifdbox:D
+  \@@_primitive:NN \ifddir                \tex_ifddir:D
+  \@@_primitive:NN \ifmdir                \tex_ifmdir:D
+  \@@_primitive:NN \iftbox                \tex_iftbox:D
+  \@@_primitive:NN \iftdir                \tex_iftdir:D
+  \@@_primitive:NN \ifybox                \tex_ifybox:D
+  \@@_primitive:NN \ifydir                \tex_ifydir:D
+  \@@_primitive:NN \inhibitglue           \tex_inhibitglue:D
+  \@@_primitive:NN \inhibitxspcode        \tex_inhibitxspcode:D
+  \@@_primitive:NN \jcharwidowpenalty     \tex_jcharwidowpenalty:D
+  \@@_primitive:NN \jfam                  \tex_jfam:D
+  \@@_primitive:NN \jfont                 \tex_jfont:D
+  \@@_primitive:NN \jis                   \tex_jis:D
+  \@@_primitive:NN \kanjiskip             \tex_kanjiskip:D
+  \@@_primitive:NN \kansuji               \tex_kansuji:D
+  \@@_primitive:NN \kansujichar           \tex_kansujichar:D
+  \@@_primitive:NN \kcatcode              \tex_kcatcode:D
+  \@@_primitive:NN \kuten                 \tex_kuten:D
+  \@@_primitive:NN \noautospacing         \tex_noautospacing:D
+  \@@_primitive:NN \noautoxspacing        \tex_noautoxspacing:D
+  \@@_primitive:NN \postbreakpenalty      \tex_postbreakpenalty:D
+  \@@_primitive:NN \prebreakpenalty       \tex_prebreakpenalty:D
+  \@@_primitive:NN \ptexminorversion      \tex_ptexminorversion:D
+  \@@_primitive:NN \ptexrevision          \tex_ptexrevision:D
+  \@@_primitive:NN \ptexversion           \tex_ptexversion:D
+  \@@_primitive:NN \showmode              \tex_showmode:D
+  \@@_primitive:NN \sjis                  \tex_sjis:D
+  \@@_primitive:NN \tate                  \tex_tate:D
+  \@@_primitive:NN \tbaselineshift        \tex_tbaselineshift:D
+  \@@_primitive:NN \tfont                 \tex_tfont:D
+  \@@_primitive:NN \xkanjiskip            \tex_xkanjiskip:D
+  \@@_primitive:NN \xspcode               \tex_xspcode:D
+  \@@_primitive:NN \ybaselineshift        \tex_ybaselineshift:D
+  \@@_primitive:NN \yoko                  \tex_yoko:D
 %    \end{macrocode}
 % Primitives from \upTeX{}.
 %    \begin{macrocode}
-  \@@_primitive:NN \disablecjktoken       \uptex_disablecjktoken:D
-  \@@_primitive:NN \enablecjktoken        \uptex_enablecjktoken:D
-  \@@_primitive:NN \forcecjktoken         \uptex_forcecjktoken:D
-  \@@_primitive:NN \kchar                 \uptex_kchar:D
-  \@@_primitive:NN \kchardef              \uptex_kchardef:D
-  \@@_primitive:NN \kuten                 \uptex_kuten:D
-  \@@_primitive:NN \ucs                   \uptex_ucs:D
-  \@@_primitive:NN \uptexrevision         \uptex_uptexrevision:D
-  \@@_primitive:NN \uptexversion          \uptex_uptexversion:D
+  \@@_primitive:NN \disablecjktoken       \tex_disablecjktoken:D
+  \@@_primitive:NN \enablecjktoken        \tex_enablecjktoken:D
+  \@@_primitive:NN \forcecjktoken         \tex_forcecjktoken:D
+  \@@_primitive:NN \kchar                 \tex_kchar:D
+  \@@_primitive:NN \kchardef              \tex_kchardef:D
+  \@@_primitive:NN \kuten                 \tex_kuten:D
+  \@@_primitive:NN \ucs                   \tex_ucs:D
+  \@@_primitive:NN \uptexrevision         \tex_uptexrevision:D
+  \@@_primitive:NN \uptexversion          \tex_uptexversion:D
 %    \end{macrocode}
 % End of the \enquote{just the names} part of the source.
 %    \begin{macrocode}
@@ -1952,6 +1952,55 @@
   \@@_primitive:NN \Usuperscript          \utex_superscript:D
   \@@_primitive:NN \Uunderdelimiter       \utex_underdelimiter:D
   \@@_primitive:NN \Uvextensible          \utex_vextensible:D
+  \@@_primitive:NN \autospacing           \ptex_autospacing:D
+  \@@_primitive:NN \autoxspacing          \ptex_autoxspacing:D
+  \@@_primitive:NN \dtou                  \ptex_dtou:D
+  \@@_primitive:NN \epTeXinputencoding    \ptex_inputencoding:D
+  \@@_primitive:NN \epTeXversion          \ptex_epTeXversion:D
+  \@@_primitive:NN \euc                   \ptex_euc:D
+  \@@_primitive:NN \ifdbox                \ptex_ifdbox:D
+  \@@_primitive:NN \ifddir                \ptex_ifddir:D
+  \@@_primitive:NN \ifmdir                \ptex_ifmdir:D
+  \@@_primitive:NN \iftbox                \ptex_iftbox:D
+  \@@_primitive:NN \iftdir                \ptex_iftdir:D
+  \@@_primitive:NN \ifybox                \ptex_ifybox:D
+  \@@_primitive:NN \ifydir                \ptex_ifydir:D
+  \@@_primitive:NN \inhibitglue           \ptex_inhibitglue:D
+  \@@_primitive:NN \inhibitxspcode        \ptex_inhibitxspcode:D
+  \@@_primitive:NN \jcharwidowpenalty     \ptex_jcharwidowpenalty:D
+  \@@_primitive:NN \jfam                  \ptex_jfam:D
+  \@@_primitive:NN \jfont                 \ptex_jfont:D
+  \@@_primitive:NN \jis                   \ptex_jis:D
+  \@@_primitive:NN \kanjiskip             \ptex_kanjiskip:D
+  \@@_primitive:NN \kansuji               \ptex_kansuji:D
+  \@@_primitive:NN \kansujichar           \ptex_kansujichar:D
+  \@@_primitive:NN \kcatcode              \ptex_kcatcode:D
+  \@@_primitive:NN \kuten                 \ptex_kuten:D
+  \@@_primitive:NN \noautospacing         \ptex_noautospacing:D
+  \@@_primitive:NN \noautoxspacing        \ptex_noautoxspacing:D
+  \@@_primitive:NN \postbreakpenalty      \ptex_postbreakpenalty:D
+  \@@_primitive:NN \prebreakpenalty       \ptex_prebreakpenalty:D
+  \@@_primitive:NN \ptexminorversion      \ptex_ptexminorversion:D
+  \@@_primitive:NN \ptexrevision          \ptex_ptexrevision:D
+  \@@_primitive:NN \ptexversion           \ptex_ptexversion:D
+  \@@_primitive:NN \showmode              \ptex_showmode:D
+  \@@_primitive:NN \sjis                  \ptex_sjis:D
+  \@@_primitive:NN \tate                  \ptex_tate:D
+  \@@_primitive:NN \tbaselineshift        \ptex_tbaselineshift:D
+  \@@_primitive:NN \tfont                 \ptex_tfont:D
+  \@@_primitive:NN \xkanjiskip            \ptex_xkanjiskip:D
+  \@@_primitive:NN \xspcode               \ptex_xspcode:D
+  \@@_primitive:NN \ybaselineshift        \ptex_ybaselineshift:D
+  \@@_primitive:NN \yoko                  \ptex_yoko:D
+  \@@_primitive:NN \disablecjktoken       \uptex_disablecjktoken:D
+  \@@_primitive:NN \enablecjktoken        \uptex_enablecjktoken:D
+  \@@_primitive:NN \forcecjktoken         \uptex_forcecjktoken:D
+  \@@_primitive:NN \kchar                 \uptex_kchar:D
+  \@@_primitive:NN \kchardef              \uptex_kchardef:D
+  \@@_primitive:NN \kuten                 \uptex_kuten:D
+  \@@_primitive:NN \ucs                   \uptex_ucs:D
+  \@@_primitive:NN \uptexrevision         \uptex_uptexrevision:D
+  \@@_primitive:NN \uptexversion          \uptex_uptexversion:D
 \tex_endgroup:D
 %</package>
 %    \end{macrocode}
