--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -122,7 +122,7 @@
 % the set up is easier.
 %    \begin{macrocode}
     \sys_if_engine_uptex:T
-      { \uptex_disablecjktoken:D }
+      { \tex_disablecjktoken:D }
 %    \end{macrocode}
 % The actual mappings: these are kept low-level for performance reasons.
 %    \begin{macrocode}
