Generate letter tokens for case changing
\Uchar doesn't offer the correct outcome, so is
kept only for the csnames (and could be dropped
there).

--- a/l3kernel/l3unicode.dtx
+++ b/l3kernel/l3unicode.dtx
@@ -102,7 +102,10 @@
                 {
                   \tl_const:cx
                     { c_@@_mixed_case_ \@@_generate:w "#1 _tl }
-                    { \@@_generate:w "#7 }
+                    {
+                       \char_generate:nn { "#7 }
+                        { \char_value_catcode:n { "#7 } }
+                    }
                 }
             }
         }
@@ -130,7 +133,10 @@
                 {
                   \tl_const:cx
                     { c_@@_fold_case_ \@@_generate:w "#1 _tl }
-                    { \@@_generate:w "#3 }
+                    {
+                      \char_generate:nn { "#3 }
+                        { \char_value_catcode:n { "#3 } }
+                    }
                 }
             }
             {
@@ -142,10 +148,15 @@
         {
           \tl_const:cx { c_@@_fold_case_ \@@_generate:w "#1 _tl }
             {
-              \@@_generate:w "#2 \exp_stop_f:
-              \@@_generate:w "#3 \exp_stop_f:
+              \char_generate:nn { "#2 }
+                { \char_value_catcode:n { "#2 } }
+              \char_generate:nn { "#3 }
+                { \char_value_catcode:n { "#3 } }
               \tl_if_blank:nF {#4}
-                { \@@_generate:w "#4 }
+                {
+                  \char_generate:nn { "#4 }
+                    { \char_value_catcode:n { "#4 } }
+                }
             }
         }
       \ior_str_map_inline:Nn \g_@@_data_ior
@@ -178,10 +189,15 @@
             {
               \tl_const:cx { c_@@_ #2 _case_ \@@_generate:w "#1 _tl }
                 {
-                  \@@_generate:w "#3 \exp_stop_f:
-                  \@@_generate:w "#4 \exp_stop_f:
+                  \char_generate:nn { "#3 }
+                    { \char_value_catcode:n { "#3 } }
+                  \char_generate:nn { "#4 }
+                    { \char_value_catcode:n { "#4 } }
                   \tl_if_blank:nF {#5}
-                    { \@@_generate:w "#5 }
+                    {
+                      \char_generate:nn { "#5 }
+                        { \char_value_catcode:n { "#5 } }
+                    }
                 }
             }
         }
