--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -695,6 +695,27 @@
 %
 % \section{Additions to \pkg{l3sys}}
 %
+% \begin{variable}[added = 2018-05-02]{\c_sys_engine_version_str}
+%   The version string of the current engine, in the same form as
+%   given in the banner issued when running a job. For \pdfTeX{}
+%   and \LuaTeX{} this is of the form
+%   \begin{quote}
+%     \meta{major}.\meta{minor}.\meta{revision}
+%   \end{quote}
+%   For \XeTeX{}, the form is
+%   \begin{quote}
+%     \meta{major}.\meta{minor}
+%   \end{quote}
+%   For \pTeX{} and \upTeX{}, only releases since \TeX{} Live 2018
+%   make the data available, and the form is more complex, as it comprises
+%   the \pTeX{} version, the \upTeX{} version and the e-\pTeX{} version.
+%   \begin{quote}
+%     p\meta{major}.\meta{minor}.\meta{revision}-u\meta{major}.\meta{minor}^^A
+%     -\meta{epTeX}
+%   \end{quote}
+%   where the |u| part is only present for \upTeX{}.
+% \end{variable}
+%
 % \begin{function}[added = 2017-05-27, EXP, pTF]{\sys_if_rand_exist:}
 %   \begin{syntax}
 %     \cs{sys_if_rand_exist_p:}
@@ -2529,6 +2550,65 @@
 %    \begin{macrocode}
 %<@@=sys>
 %    \end{macrocode}
+%
+% \begin{variable}{\c_sys_engine_version_str}
+%   Various different engines, various different ways to extract the
+%   data!
+%    \begin{macrocode}
+\str_const:Nx \c_sys_engine_version_str
+  {
+    \str_case:on \c_sys_engine_str
+      {
+        { pdftex }
+          {
+            \fp_eval:n { round(\int_use:N \tex_pdftexversion:D / 100 , 2) }
+            .
+            \tex_pdftexrevision:D
+          }
+        { ptex }
+          {
+            \cs_if_exist:NT \tex_ptexversion:D
+              {
+                p
+                \int_use:N  \tex_ptexversion:D
+                \tex_ptexrevision:D
+                \int_use:N \tex_ptexminorversion:D
+                -
+                \int_use:N \tex_epTeXversion:D
+              }
+          }
+        { luatex }
+          {
+            \fp_eval:n { round(\int_use:N \tex_luatexversion:D / 100, 2) }
+            .
+            \tex_luatexrevision:D
+          }
+        { uptex }
+          {
+            \cs_if_exist:NT \tex_ptexversion:D
+              {
+                p
+                \int_use:N  \tex_ptexversion:D
+                \tex_ptexrevision:D
+                \int_use:N \tex_ptexminorversion:D
+                -
+                u
+                \int_use:N  \tex_uptexversion:D
+                \tex_uptexrevision:D
+                -
+                \int_use:N \tex_epTeXversion:D
+              }
+          }
+        { xetex }
+          {
+            \int_use:N \tex_XeTeXversion:D
+            .
+            \tex_XeTeXrevision:D
+          }
+      }
+  }
+%    \end{macrocode}
+% \end{variable}
 %
 % \begin{macro}[EXP, pTF]{\sys_if_rand_exist:}
 %   Currently, randomness exists under \pdfTeX{}, \LuaTeX{}, \pTeX{} and \upTeX{}.
