Better error message when random numbers are not available (in XeTeX)

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2508,7 +2508,10 @@
   }
   {
     \cs_new_protected:Npn \seq_shuffle:N #1
-      { \__kernel_msg_error:nn { kernel } { fp-no-random } }
+      {
+        \__kernel_msg_error:nnn { kernel } { fp-no-random }
+          { \seq_shuffle:N #1 }
+      }
     \cs_new_eq:NN \seq_gshuffle:N \seq_shuffle:N
   }
 %    \end{macrocode}
@@ -2619,19 +2622,39 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]{\sys_rand_seed:}
-%   Unpack the primitive.
+%   Unpack the primitive.  When random numbers are not available, we
+%   return zero after an error (and incidentally make sure the number of
+%   expansions needed is the same as with random numbers available).
 %    \begin{macrocode}
-\cs_new:Npn \sys_rand_seed: { \tex_the:D \tex_randomseed:D }
-\cs_if_exist:NF \tex_randomseed:D
-  { \cs_set:Npn \sys_rand_seed: { 0 } }
+\sys_if_rand_exist:TF
+  { \cs_new:Npn \sys_rand_seed: { \tex_the:D \tex_randomseed:D } }
+  {
+    \cs_new:Npn \sys_rand_seed:
+      {
+        \int_value:w
+        \__kernel_msg_expandable_error:nnn { kernel } { fp-no-random }
+          { \sys_rand_seed: }
+        \c_zero
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}{\sys_gset_rand_seed:n}
 %   The primitive always assigns the seed globally.
 %    \begin{macrocode}
-\cs_new_protected:Npn \sys_gset_rand_seed:n #1
-  { \tex_setrandomseed:D \int_eval:n {#1} \exp_stop_f: }
+\sys_if_rand_exist:TF
+  {
+    \cs_new_protected:Npn \sys_gset_rand_seed:n #1
+      { \tex_setrandomseed:D \int_eval:n {#1} \exp_stop_f: }
+  }
+  {
+    \cs_new_protected:Npn \sys_gset_rand_seed:n #1
+      {
+        \__kernel_msg_error:nnn { kernel } { fp-no-random }
+          { \sys_gset_rand_seed:n {#1} }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
