Document that sequences are almost always better than clists [ci skip]

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -50,10 +50,14 @@
 % \begin{documentation}
 %
 % Comma lists contain ordered data where items can be added to the left
-% or right end of the list.  The features of this data type largely
-% overlap with those of the sequence data type, for instance applying a
-% function to every item, removing duplicate items, extracting a given
-% item, using the comma list with specified separators, and so on.
+% or right end of the list.  This data type allows basic list
+% manipulations such as adding/removing items, applying a function to
+% every item, removing duplicate items, extracting a given item, using
+% the comma list with specified separators, and so on.  Sequences
+% (defined in \pkg{l3seq}) are safer, faster, and provide more features,
+% so they should often be preferred to comma lists.  Comma lists are
+% mostly useful when interfacing with \LaTeXe{} or other code that
+% expects or provides comma list data.
 %
 % Several items can be added at once.  To ease input of comma lists from
 % data provided by a user outside an \cs{ExplSyntaxOn} \ldots{}
@@ -81,9 +85,7 @@
 % or ends with a space, or is a single brace group), surround it with
 % braces.
 %
-% Comma lists are particularly useful when implementing user interfaces,
-% or when interfacing with \LaTeXe{} or other code that expects or
-% provides comma list data.  Almost all operations on comma lists are
+% Almost all operations on comma lists are
 % noticeably slower than those on sequences so converting the data to
 % sequences using \cs{seq_set_from_clist:Nn} (see \pkg{l3seq}) may be
 % advisable if speed is important.  The exception is that
