Better error message for \intarray_new:Nn with negative size

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -147,6 +147,11 @@
 %    \end{macrocode}
 % \end{variable}
 %
+%    \begin{macrocode}
+\__kernel_msg_new:nnn { kernel } { negative-intarray-size }
+  { Size~of~intarray~may~not~be~negative:~#1 }
+%    \end{macrocode}
+%
 % \begin{macro}{\intarray_new:Nn}
 %   Declare |#1| to be a font (arbitrarily |cmr10| at a never-used
 %   size).  Store the array's size as the \tn{hyphenchar} of that font
@@ -166,9 +171,15 @@
     \tex_global:D \tex_font:D #1
       = cmr10~at~ \g_@@_font_int \c_@@_sp_dim \scan_stop:
     \tex_hyphenchar:D #1 = \int_eval:n {#2} \scan_stop:
-    \int_compare:nNnT { \tex_hyphenchar:D #1 } > 0
-      { \tex_fontdimen:D \tex_hyphenchar:D #1 #1 = \c_zero_dim }
-    \int_step_inline:nn { 8 } { \tex_fontdimen:D ##1 #1 = \c_zero_dim }
+    \int_compare:nNnT { \intarray_count:N #1 } < 0
+      {
+        \__kernel_msg_error:nnx { kernel } { negative-intarray-size }
+          { \intarray_count:N #1 }
+      }
+    \int_compare:nNnT { \intarray_count:N #1 } > 0
+      { \__kernel_intarray_gset:Nnn #1 { \intarray_count:N #1 } { 0 } }
+    \int_step_inline:nn { 8 }
+      { \__kernel_intarray_gset:Nnn #1 {##1} { 0 } }
   }
 %    \end{macrocode}
 % \end{macro}
