Update minimum XeTeX version requirement
Loading Unicode data means we must have
\Ucharcat. For the Unicode engines, pushing the version
requirement seems reasonable.

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -141,12 +141,8 @@
 %     \item $12$ (other)
 %     \item $13$ (active) (not \XeTeX{})
 %   \end{itemize}
-%   and other values raise an error.
-%
-%   The \meta{charcode} may be any one valid for the engine in use. Note
-%   however that for \XeTeX{} releases prior to 0.99992 only the 8-bit
-%   range ($0$ to $255$) is accepted due to engine limitations. Note also
-%   that \XeTeX{} cannot currently generate active character tokens.
+%   and other values raise an error. The \meta{charcode} may be any one valid
+%   for the engine in use.
 % \end{function}
 %
 % \begin{variable}[added = 2011-09-05]{\c_catcode_other_space_tl}
@@ -1416,7 +1412,7 @@
 \tl_new:N \l_@@_tmp_tl
 %    \end{macrocode}
 %   Engine-dependent definitions are now needed for the implementation. For
-%   \LuaTeX{} and recent \XeTeX{} releases there is engine-level support.
+%   \LuaTeX{} and \XeTeX{} there is engine-level support.
 %   They can do cases that macro emulation can't. All of those are filtered
 %   out here using a primitive-based boolean expression for speed.
 %   The final level is the basic definition at the engine level: the arguments
