--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -993,12 +993,13 @@
 % Any engine which defines |\pdfoutput| (\emph{i.e.}~allows direct production
 % of a PDF file without a DVI intermediate) must also provide |\pdfcolorstack|,
 % |\pdfliteral|, |\pdfmatrix|, |\pdfrestore| and |\pdfsave| or equivalent
-% functionality.
+% functionality. Fully Unicode engines must provide a method for producing
+% character tokens in an expandable manner.
 %
 % Practically, these requirements are met by the engines
 % \begin{itemize}
 %    \item \pdfTeX{} v1.40 or later.
-%    \item \XeTeX{} v0.9994 or later.
+%    \item \XeTeX{} v0.99992 or later.
 %    \item \LuaTeX{} v0.70 or later.
 %    \item e-(u)\pTeX{} mid-2012 or later.
 % \end{itemize}
