--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -363,7 +363,7 @@
       \LineBreak
       These are available in the engines\LineBreak
       - pdfTeX v1.40\LineBreak
-      - XeTeX v0.9994\LineBreak
+      - XeTeX v0.99992\LineBreak
       - LuaTeX v0.70\LineBreak
       - e-(u)pTeX mid-2012\LineBreak
       or later.\LineBreak
@@ -373,7 +373,14 @@
     \expandafter\ifx\csname pdfstrcmp\endcsname\relax
     \else
       \expandafter\ifx\csname pdftexversion\endcsname\relax
-        1%
+        \expandafter\ifx\csname Ucharcat\endcsname\relax
+          \ifx\csname kanjiskip\endcsname\relax
+          \else
+            1%
+          \fi
+        \else
+          1%
+        \fi
       \else
         \ifnum\pdftexversion<140 \else 1\fi
       \fi
