Implement \intarray_gzero:N to clear all entries in an intarray

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -70,6 +70,8 @@
 %   \end{syntax}
 %   Evaluates the integer expression \meta{size} and allocates an
 %   \meta{integer array variable} with that number of (zero) entries.
+%   The variable name should start with |\g_| because assignments are
+%   always global.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2018-03-29]{\intarray_count:N}
@@ -90,6 +92,14 @@
 %   \cs{intarray_count:N}, or the \meta{value}'s absolute value is
 %   bigger than $2^{30}-1$, an error occurs.  Assignments are always
 %   global.
+% \end{function}
+%
+% \begin{function}[added = 2018-05-04]{\intarray_gzero:N}
+%   \begin{syntax}
+%     \cs{intarray_gzero:N} \meta{intarray~var}
+%   \end{syntax}
+%   Sets all entries of the \meta{integer array variable} to zero.
+%   Assignments are always global.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2018-03-29]{\intarray_item:Nn}
@@ -274,6 +284,18 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\intarray_gzero:N}
+%   Set the appropriate \tn{fontdimen} to zero.  No bound checking
+%   needed.
+%    \begin{macrocode}
+\cs_new_protected:Npn \intarray_gzero:N #1
+  {
+    \int_step_inline:nn { \intarray_count:N #1 }
+      { \tex_fontdimen:D ##1 #1 \c_zero_dim }
+  }
+%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]{\intarray_item:Nn, \__kernel_intarray_item:Nn}
