Implement \intarray_to_clist:N and \int_array_show:N / log:N.

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1912,6 +1912,8 @@
       { is~empty \\>~ . }
       { contains~the~items~(without~outer~braces): #2 . }
   }
+\__kernel_msg_new:nnn { kernel } { show-intarray }
+  { The~integer~array~#1~contains~#2~items: \\ #3 . }
 \__kernel_msg_new:nnn { kernel } { show-prop }
   {
     The~property~list~#1~
