--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -151,6 +151,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{variable}{\l_@@_loop_int}
+%   A loop index.
+%    \begin{macrocode}
+\int_new:N \l_@@_loop_int
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{variable}{\c_@@_sp_dim}
 %   Used to convert integers to dimensions fast.
 %    \begin{macrocode}
@@ -170,7 +177,7 @@
   { Size~of~intarray~may~not~be~negative:~#1 }
 %    \end{macrocode}
 %
-% \begin{macro}{\intarray_new:Nn}
+% \begin{macro}{\intarray_new:Nn, \@@_new:N}
 %   Declare |#1| to be a font (arbitrarily |cmr10| at a never-used
 %   size).  Store the array's size as the \tn{hyphenchar} of that font
 %   and make sure enough \tn{fontdimen} are allocated, by setting the
@@ -181,13 +188,19 @@
 %   Every \texttt{intarray} must be global; it's enough to run this
 %   check in \cs{intarray_new:Nn}.
 %    \begin{macrocode}
-\__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN g #1 } { }
-\cs_new_protected:Npn \intarray_new:Nn #1#2
+\cs_new_protected:Npn \@@_new:N #1
   {
     \__kernel_chk_if_free_cs:N #1
     \int_gincr:N \g_@@_font_int
     \tex_global:D \tex_font:D #1
       = cmr10~at~ \g_@@_font_int \c_@@_sp_dim \scan_stop:
+    \int_step_inline:nn { 8 }
+      { \__kernel_intarray_gset:Nnn #1 {##1} \c_zero }
+  }
+\__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN g #1 } { }
+\cs_new_protected:Npn \intarray_new:Nn #1#2
+  {
+    \@@_new:N #1
     \@@_count:w #1 = \int_eval:n {#2} \scan_stop:
     \int_compare:nNnT { \intarray_count:N #1 } < 0
       {
@@ -196,8 +209,6 @@
       }
     \int_compare:nNnT { \intarray_count:N #1 } > 0
       { \__kernel_intarray_gset:Nnn #1 { \intarray_count:N #1 } { 0 } }
-    \int_step_inline:nn { 8 }
-      { \__kernel_intarray_gset:Nnn #1 {##1} { 0 } }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -255,31 +266,30 @@
     \int_value:w \int_eval:n {#2} \exp_after:wN ;
     \int_value:w \int_eval:n {#3} ;
   }
+\cs_new_protected:Npn \@@_gset:Nww #1#2 ; #3 ;
+  {
+    \@@_bounds:NNnTF \__kernel_msg_error:nnxxx #1 {#2}
+      {
+        \@@_gset_overflow_test:nw {#3}
+        \__kernel_intarray_gset:Nnn #1 {#2} {#3}
+      }
+      { }
+  }
 \cs_if_exist:NTF \tex_ifabsnum:D
   {
-    \cs_new_protected:Npn \@@_gset:Nww #1#2 ; #3 ;
+    \cs_new_protected:Npn \@@_gset_overflow_test:nw #1
       {
-        \@@_bounds:NNnTF \__kernel_msg_error:nnxxx #1 {#2}
-          {
-            \tex_ifabsnum:D #3 > \c_max_dim
-              \exp_after:wN \@@_gset_overflow:NNnn
-            \fi:
-            \__kernel_intarray_gset:Nnn #1 {#2} {#3}
-          }
-          { }
+        \tex_ifabsnum:D #1 > \c_max_dim
+          \exp_after:wN \@@_gset_overflow:NNnn
+        \fi:
       }
   }
   {
-    \cs_new_protected:Npn \@@_gset:Nww #1#2 ; #3 ;
+    \cs_new_protected:Npn \@@_gset_overflow_test:nw #1
       {
-        \@@_bounds:NNnTF \__kernel_msg_error:nnxxx #1 {#2}
-          {
-            \if_int_compare:w \int_abs:n {#3} > \c_max_dim
-              \exp_after:wN \@@_gset_overflow:NNnn
-            \fi:
-            \__kernel_intarray_gset:Nnn #1 {#2} {#3}
-          }
-          { }
+        \if_int_compare:w \int_abs:n {#1} > \c_max_dim
+          \exp_after:wN \@@_gset_overflow:NNnn
+        \fi:
       }
   }
 \cs_new_protected:Npn \@@_gset_overflow:NNnn #1#2#3#4
@@ -296,12 +306,18 @@
 %
 % \begin{macro}{\intarray_gzero:N}
 %   Set the appropriate \tn{fontdimen} to zero.  No bound checking
-%   needed.
+%   needed.  The \cs{prg_replicate:nn} possibly uses quite a lot of
+%   memory, but this is somewhat comparable to the size of the array,
+%   and it is much faster than an \cs{int_step_inline:nn} loop.
 %    \begin{macrocode}
 \cs_new_protected:Npn \intarray_gzero:N #1
   {
-    \int_step_inline:nn { \intarray_count:N #1 }
-      { \@@_entry:w ##1 #1 \c_zero_dim }
+    \int_zero:N \l_@@_loop_int
+    \prg_replicate:nn { \intarray_count:N #1 }
+      {
+        \int_incr:N \l_@@_loop_int
+        \@@_entry:w \l_@@_loop_int #1 \c_zero_dim
+      }
   }
 %    \end{macrocode}
 % \end{macro}
