Implement \intarray_const_from_clist:Nn

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -375,7 +375,17 @@
 %
 % \subsection{Working with contents of integer arrays}
 %
-% \begin{function}[added = 2018-05-03, rEXP]{\intarray_to_clist:N}
+% \begin{function}[added = 2018-05-04, rEXP]{\intarray_const_from_clist:Nn}
+%   \begin{syntax}
+%     \cs{intarray_const_from_clist:Nn} \meta{intarray~var} \meta{intexpr clist}
+%   \end{syntax}
+%   Creates a new constant \meta{integer array variable} or raises an
+%   error if the name is already taken.  The \meta{integer array
+%   variable} is set (globally) to contain as its items the results of
+%   evaluating each \meta{integer expression} in the \meta{comma list}.
+% \end{function}
+%
+% \begin{function}[added = 2018-05-04, rEXP]{\intarray_to_clist:N}
 %   \begin{syntax}
 %     \cs{intarray_to_clist:N} \meta{intarray~var}
 %   \end{syntax}
@@ -385,7 +395,7 @@
 %   result has one fewer comma than the number of items.
 % \end{function}
 %
-% \begin{function}[added = 2018-05-03]{\intarray_show:N, \intarray_log:N}
+% \begin{function}[added = 2018-05-04]{\intarray_show:N, \intarray_log:N}
 %   \begin{syntax}
 %     \cs{intarray_show:N} \meta{intarray~var}
 %     \cs{intarray_log:N} \meta{intarray~var}
@@ -2149,6 +2159,34 @@
 %    \end{macrocode}
 %
 % \subsubsection{Working with contents of integer arrays}
+%
+% \begin{macro}{\intarray_const_from_clist:Nn, \@@_const_from_clist:nN}
+%   Similar to \cs{intarray_new:Nn} (which we don't use because when
+%   debugging is enabled that function checks the variable name starts
+%   with |g_|).  We make use of the fact that \TeX{} allows allocation
+%   of successive \tn{fontdimen} as long as no other font has been
+%   declared: no need to count the comma list items first.  We need the
+%   code in \cs{intarray_gset:Nnn} that checks the item value is not too
+%   big, namely \cs{@@_gset_overflow_test:nw}, but not the code that
+%   checks bounds.  At the end, set the size of the intarray.
+%    \begin{macrocode}
+\__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN c #1 } { }
+\cs_new_protected:Npn \intarray_const_from_clist:Nn #1#2
+  {
+    \@@_new:N #1
+    \int_zero:N \l_@@_loop_int
+    \clist_map_inline:nn {#2}
+      { \exp_args:Nf \@@_const_from_clist:nN { \int_eval:n {##1} } #1 }
+    \@@_count:w #1 \l_@@_loop_int
+  }
+\cs_new_protected:Npn \@@_const_from_clist:nN #1#2
+  {
+    \int_incr:N \l_@@_loop_int
+    \@@_gset_overflow_test:nw {#1}
+    \__kernel_intarray_gset:Nnn #2 \l_@@_loop_int {#1}
+  }
+%    \end{macrocode}
+% \end{macro}
 %
 % \begin{macro}[rEXP]{\intarray_to_clist:N, \@@_to_clist:Nn, \@@_to_clist:w}
 %   Loop through the array, putting a comma before each item.  Remove
