Move code of candidate functions to l3intarray, but not the doc
These functions are still candidates, it's just that I need one of them
in l3fp and I don't want to separate them since they share a few auxiliaries.

--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -347,6 +347,87 @@
 % \end{macro}
 % \end{macro}
 %
+% \subsection{Working with contents of integer arrays}
+%
+% At the time of writing these are candidates, but we need at least
+% \cs{intarray_const_from_clist:Nn} in \pkg{l3fp} so before
+% \pkg{l3candidates}.
+%
+% \begin{macro}{\intarray_const_from_clist:Nn, \@@_const_from_clist:nN}
+%   Similar to \cs{intarray_new:Nn} (which we don't use because when
+%   debugging is enabled that function checks the variable name starts
+%   with |g_|).  We make use of the fact that \TeX{} allows allocation
+%   of successive \tn{fontdimen} as long as no other font has been
+%   declared: no need to count the comma list items first.  We need the
+%   code in \cs{intarray_gset:Nnn} that checks the item value is not too
+%   big, namely \cs{@@_gset_overflow_test:nw}, but not the code that
+%   checks bounds.  At the end, set the size of the intarray.
+%    \begin{macrocode}
+\__kernel_patch:nnNNpn { \__kernel_chk_var_scope:NN c #1 } { }
+\cs_new_protected:Npn \intarray_const_from_clist:Nn #1#2
+  {
+    \@@_new:N #1
+    \int_zero:N \l_@@_loop_int
+    \clist_map_inline:nn {#2}
+      { \exp_args:Nf \@@_const_from_clist:nN { \int_eval:n {##1} } #1 }
+    \@@_count:w #1 \l_@@_loop_int
+  }
+\cs_new_protected:Npn \@@_const_from_clist:nN #1#2
+  {
+    \int_incr:N \l_@@_loop_int
+    \@@_gset_overflow_test:nw {#1}
+    \__kernel_intarray_gset:Nnn #2 \l_@@_loop_int {#1}
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[rEXP]{\intarray_to_clist:N, \@@_to_clist:Nn, \@@_to_clist:w}
+%   Loop through the array, putting a comma before each item.  Remove
+%   the leading comma with |f|-expansion.  We also use the auxiliary in
+%   \cs{intarray_show:N} with argument comma, space.
+%    \begin{macrocode}
+\cs_new:Npn \intarray_to_clist:N #1 { \@@_to_clist:Nn #1 { , } }
+\cs_new:Npn \@@_to_clist:Nn #1#2
+  {
+    \int_compare:nNnF { \intarray_count:N #1 } = \c_zero
+      {
+        \exp_last_unbraced:Nf \use_none:n
+          { \@@_to_clist:w 1 ; #1 {#2} \prg_break_point: }
+      }
+  }
+\cs_new:Npn \@@_to_clist:w #1 ; #2#3
+  {
+    \if_int_compare:w #1 > \@@_count:w #2
+      \prg_break:n
+    \fi:
+    #3 \__kernel_intarray_item:Nn #2 {#1}
+    \exp_after:wN \@@_to_clist:w
+    \int_value:w \int_eval:w #1 + \c_one ; #2 {#3}
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\intarray_show:N, \intarray_log:N}
+%   Convert the list to a comma list (with spaces after each comma)
+%    \begin{macrocode}
+\cs_new_protected:Npn \intarray_show:N { \@@_show:NN \msg_show:nnxxxx }
+\cs_generate_variant:Nn \intarray_show:N { c }
+\cs_new_protected:Npn \intarray_log:N { \@@_show:NN \msg_log:nnxxxx }
+\cs_generate_variant:Nn \intarray_log:N { c }
+\cs_new_protected:Npn \@@_show:NN #1#2
+  {
+    \__kernel_chk_defined:NT #2
+      {
+        #1 { LaTeX/kernel } { show-intarray }
+          { \token_to_str:N #2 }
+          { \intarray_count:N #2 }
+          { >~ \@@_to_clist:Nn #2 { , ~ } }
+          { }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</initex|package>
 %    \end{macrocode}
