--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -71,12 +71,10 @@
 %
 % \subsection{Engine support}
 %
-% At present, \XeTeX{} does not provide random
-% numbers, while \pdfTeX{}, \LuaTeX{}, \pTeX{} and \upTeX{} provide the primitive
-% \cs{pdftex_uniformdeviate:D}.  We write the test twice simply in
-% order to write the \texttt{false} branch first.
+% Most engines provide random numbers, but not all.  We write the test
+% twice simply in order to write the \texttt{false} branch first.
 %    \begin{macrocode}
-\cs_if_exist:NF \tex_uniformdeviate:D
+\sys_if_rand_exist:F
   {
     \__kernel_msg_new:nnn { kernel } { fp-no-random }
       { Random~numbers~unavailable~for~#1 }
@@ -94,7 +92,7 @@
         \int_eval:n {#1}
       }
   }
-\cs_if_exist:NT \tex_uniformdeviate:D
+\sys_if_rand_exist:T
   {
 %    \end{macrocode}
 %
@@ -105,12 +103,12 @@
 %     \c_@@_rand_four_int,
 %     \c_@@_rand_eight_int,
 %   }
-%   The \cs{pdftex_uniformdeviate:D} primitive gives a pseudo-random
+%   The \cs{tex_uniformdeviate:D} primitive gives a pseudo-random
 %   integer in a range $[0,n-1]$ of the user's choice.  This number is
 %   meant to be uniformly distributed, but is produced by rescaling a
 %   uniform pseudo-random integer in $[0,2^{28}-1]$.  For instance,
 %   setting~$n$ to (any multiple of) $2^{29}$ gives only even values.
-%   Thus it is only safe to call \cs{pdftex_uniformdeviate:D} with
+%   Thus it is only safe to call \cs{tex_uniformdeviate:D} with
 %   argument $2^{28}$.  This integer is also used in the implementation
 %   of \cs{int_rand:nn}.  We also use variants of this number
 %   rounded down to multiples of $10^4$ and $10^8$.
