Reflect in some docs the recent primitive renames [ci skip]
Replacements are "\cs{etex_protected:D}" to "\cs{tex_protected:D}" and
similar.

--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1040,7 +1040,7 @@
 %   The need to detokenize and force
 %   expansion of input arises from the case where a |#| token is used in the
 %   input, \emph{e.g.}~|\__str_if_eq_x:nn {#} { \tl_to_str:n {#} }|, which
-%   otherwise would fail as \cs{luatex_luaescapestring:D} does not double
+%   otherwise would fail as \cs{tex_luaescapestring:D} does not double
 %   such tokens.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_eq_x:nn #1#2 { \tex_strcmp:D {#1} {#2} }
