--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1149,7 +1149,7 @@
 % First standardize some definitions: the $16$ assignment functions
 % |\cs_(set/gset/new)(/_protected)(/_nopar):Np(n/x)| are normally
 % defined in terms of each other, but that complicates checking, since
-% some are defined as \cs{tex_long:D} or \cs{etex_protected:D} followed
+% some are defined as \cs{tex_long:D} or \cs{tex_protected:D} followed
 % by others.
 %    \begin{macrocode}
     \cs_gset_protected:Npn \cs_set_nopar:Npn { \tex_def:D }
