--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -631,20 +631,20 @@
 %   {\__msg_expandable_warning_aux:nn, \__msg_expandable_warning_loop:n}
 %   The idea is to use the warnings that \eTeX{} produces when a
 %   conditional is ended in a different file than where it was started.
-%   Build a file using \cs{etex_scantokens:D}, with essentially
+%   Build a file using \cs{tex_scantokens:D}, with essentially
 %   \tn{inputlineno} empty lines, followed by a line with the string
 %   \texttt{LaTeX3 warning:} followed by the warning message.  This
-%   \cs{etex_scantokens:D} is expanded before the previous \cs{if:w},
+%   \cs{tex_scantokens:D} is expanded before the previous \cs{if:w},
 %   hence the \cs{if:w} starts within the new file, but does not have a
 %   line number (since it was not input in that file): those properties
 %   make the \eTeX{} warning shorter.
 %
 %   We need to get rid of the contents of the file.  A simple
 %   \cs{use_none_delimit_by_q_recursion_stop:w} would fail since there
-%   is an end-of-file marker at the end of the \cs{etex_scantokens:D}
+%   is an end-of-file marker at the end of the \cs{tex_scantokens:D}
 %   file.  Instead, we read the contents as for a token list mapping,
 %   with an additional \cs{exp_not:N}, inserted there to prevent the
-%   end-of-file marker from making \cs{etex_scantokens:D} choke.  The
+%   end-of-file marker from making \cs{tex_scantokens:D} choke.  The
 %   warning is in fact produced when \cs{exp_not:N} goes beyond the
 %   end-of-file marker (hence acting on the following quark).
 %    \begin{macrocode}
@@ -724,7 +724,7 @@
 % \LuaTeX{}'s \tn{scantokens} is broken (it stops reading after a single
 % line), so the approach above fails.  However, using \Lua{} code we can
 % get a better looking warning, so let's.  We could add some
-% \cs{iow_newline:} within the argument of \cs{luatex_luaescapestring:D}
+% \cs{iow_newline:} within the argument of \cs{tex_luaescapestring:D}
 % if wanted.
 %    \begin{macrocode}
 \sys_if_engine_luatex:T
@@ -1189,7 +1189,7 @@
 %   glue expressions, then compare the appropriate glue components.
 %   Infinite glues complicate the picture: if one of the operands has a
 %   higher order infinity than the other, replace the negligible glue by
-%   zero.  The use of \cs{etex_glueexpr:D} and \cs{scan_stop:} ensures
+%   zero.  The use of \cs{tex_glueexpr:D} and \cs{scan_stop:} ensures
 %   that the arguments of \cs{if_dim:w} are entirely found before the
 %   expansion hits \cs{prg_return_true:}.
 %    \begin{macrocode}
