Properly mark renamed primitives as deprecated
This means \debug_on:n { deprecation } can be used to detect uses
of primitives under their old names in packages.

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1358,6 +1358,9 @@
 % becomes very tricky with multiple parallel engine developments, so has been
 % dropped. To cover the transition, we provide the older names here for a
 % limited period (until the end of 2019).
+%
+% To allow \cs{debug_on:n} \Arg{deprecation} to work we save the list of
+% primitives into \cs{@@_primitives:}
 %    \begin{macrocode}
 %<*package>
 \tex_begingroup:D
@@ -1370,6 +1373,10 @@
       \tex_fi:D
         \use_none:n { \tex_global:D \tex_let:D #2 #1 }
     }
+  \tex_xdef:D \@@_primitives:
+    {
+      \tex_unexpanded:D
+        {
   \@@_primitive:NN \beginL                \etex_beginL:D
   \@@_primitive:NN \beginR                \etex_beginR:D
   \@@_primitive:NN \botmarks              \etex_botmarks:D
@@ -1984,6 +1991,9 @@
   \@@_primitive:NN \ucs                   \uptex_ucs:D
   \@@_primitive:NN \uptexrevision         \uptex_uptexrevision:D
   \@@_primitive:NN \uptexversion          \uptex_uptexversion:D
+        }
+    }
+  \@@_primitives:
 \tex_endgroup:D
 %</package>
 %    \end{macrocode}
