Ease turning on all debugging code: with \debug_on:n { all }

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1592,7 +1592,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\debug_on:n, \debug_off:n}
+% \begin{macro}{\debug_on:n, \debug_off:n, \@@_all_on:, \@@_all_off:}
 %
 %    \begin{macrocode}
 \__kernel_if_debug:TF
@@ -1611,6 +1611,26 @@
           {
             \cs_if_exist_use:cF { @@_ ##1 _off: }
               { \__kernel_msg_error:nnn { kernel } { debug } {##1} }
+          }
+      }
+    \cs_set_protected:Npn \@@_all_on:
+      {
+        \debug_on:n
+          {
+            check-declarations ,
+            check-expressions ,
+            deprecation ,
+            log-functions ,
+          }
+      }
+    \cs_set_protected:Npn \@@_all_off:
+      {
+        \debug_off:n
+          {
+            check-declarations ,
+            check-expressions ,
+            deprecation ,
+            log-functions ,
           }
       }
   }
