--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -101,6 +101,7 @@
 %       skip, and muskip expressions are not terminated prematurely;
 %     \item \texttt{deprecation} that makes soon-to-be-deprecated commands produce errors;
 %     \item \texttt{log-functions} that logs function definitions;
+%     \item \texttt{all} that does all of the above.
 %   \end{itemize}
 %   Providing these as switches rather than options allows testing code
 %   even if it relies on other packages: load all other packages, call
