--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -2605,11 +2605,12 @@
 %   The actual allocation mechanism is in \pkg{l3alloc}; it requires
 %   \cs{c_one} to be defined.  In package mode, reuse \tn{m@ne}.
 %   We also store in two global token lists some code for
-%   \cs{debug_deprecation_on:} and \cs{debug_deprecation_off:}.  For the
+%   \cs{debug_on:n} \texttt{\{deprecation\}} and \cs{debug_off:n}
+%   \texttt{\{deprecation\}}.  For the
 %   latter, we need to locally set \cs{c_minus_one} back to the constant
 %   hence use a private name.  We use \cs{tex_let:D} directly because
 %   \cs{c_minus_one} (as all deprecated commands) is made outer by
-%   \cs{debug_deprecation_on:}.
+%   \cs{debug_on:n} \texttt{\{deprecation\}}.
 %    \begin{macrocode}
 %<package>\cs_gset_eq:NN \c_@@_minus_one \m@ne
 %<initex>\int_const:Nn \c_@@_minus_one { -1 }
