Implement candidate \int_rand:n
Only one arg, in analogy with \int_step_function:nN.  Besides, this
\int_rand:n is faster than \int_rand:nn { 1 }.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -423,6 +423,17 @@
 %   locally.
 % \end{function}
 %
+% \section{Additions to \pkg{l3int}}
+%
+% \begin{function}[EXP, added = 2018-05-05]{\int_rand:n}
+%   \begin{syntax}
+%     \cs{int_rand:n} \Arg{intexpr}
+%   \end{syntax}
+%   Evaluates the \meta{integer expression} then produces a
+%   pseudo-random number between $1$ and the \meta{intexpr} (included).
+%   This is not yet available in \XeTeX{}.
+% \end{function}
+%
 % \section{Additions to \pkg{l3intarray}}
 %
 % \subsection{Working with contents of integer arrays}
