--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -91,6 +91,12 @@
           { \int_rand:nn {#1} {#2} }
         \int_eval:n {#1}
       }
+    \cs_new:Npn \int_rand:n #1
+      {
+        \__kernel_msg_expandable_error:nnn { kernel } { fp-no-random }
+          { \int_rand:n {#1} }
+        1
+      }
   }
 \sys_if_rand_exist:T
   {
@@ -480,6 +486,31 @@
               { \@@_int_eval:w #2 - #1 + 1 \@@_int_eval_end: }
           \else:
             \fp_to_int:n { randint(#1,#2) }
+          \fi:
+        \fi:
+      }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\int_rand:n, \@@_randint:n}
+%   Similar to \cs{int_rand:nn}, but needs fewer checks.
+%    \begin{macrocode}
+    \cs_new:Npn \int_rand:n #1
+      {
+        \int_eval:n
+          { \exp_args:Nf \@@_randint:n { \int_eval:n {#1} } }
+      }
+    \cs_new:Npn \@@_randint:n #1
+      {
+        \if_int_compare:w #1 < 1 \exp_stop_f:
+          \__kernel_msg_expandable_error:nnnn
+            { kernel } { randint-backward-range } { 1 } {#1}
+          \@@_randint:ww #1; 1;
+        \else:
+          \if_int_compare:w #1 > \c_@@_rand_critical_int
+            \fp_to_int:n { randint(#1) }
+          \else:
+            \@@_randint:nn {1} {#1}
           \fi:
         \fi:
       }
