Implement candidate \intarray_rand_item:N
This allows a poor-man's weighted dice: just make a constant integer
array with each entry repeated a number of times equal to the desired
weight.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -436,6 +436,15 @@
 %
 % \section{Additions to \pkg{l3intarray}}
 %
+% \begin{function}[EXP, added = 2018-05-05]{\intarray_rand_item:N}
+%   \begin{syntax}
+%     \cs{intarray_rand_item:N} \meta{intarray~var}
+%   \end{syntax}
+%   Selects a pseudo-random item of the \meta{integer array}.  If the
+%   \meta{integer array} is empty, produce an error.  This is not yet
+%   available in \XeTeX{}.
+% \end{function}
+%
 % \subsection{Working with contents of integer arrays}
 %
 % \begin{function}[added = 2018-05-04, rEXP]{\intarray_const_from_clist:Nn}
