--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -347,6 +347,14 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\intarray_rand_item:N}
+%   Importantly, \cs{intarray_item:Nn} only evaluates its argument once.
+%    \begin{macrocode}
+\cs_new:Npn \intarray_rand_item:N #1
+  { \intarray_item:Nn #1 { \int_rand:n { \intarray_count:N #1 } } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Working with contents of integer arrays}
 %
 % At the time of writing these are candidates, but we need at least
