--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -445,6 +445,22 @@
 %   available in \XeTeX{}.
 % \end{function}
 %
+% \begin{function}[added = 2018-05-05]{\intarray_gset_rand:Nnn, \intarray_gset_rand:Nn}
+%   \begin{syntax}
+%     \cs{intarray_gset_rand:Nnn} \meta{intarray~var} \Arg{minimum} \Arg{maximum}
+%     \cs{intarray_gset_rand:Nn} \meta{intarray~var} \Arg{maximum}
+%   \end{syntax}
+%   Evaluates the integer expressions \meta{minimum} and \meta{maximum}
+%   then sets each entry (independently) of the \meta{integer array
+%   variable} to a pseudo-random number between the two (with bounds
+%   included).  If the absolute value of either bound is bigger than
+%   $2^{30}-1$, an error occurs.  Entries are generated in the same way
+%   as repeated calls to \cs{int_rand:nn} or \cs{int_rand:n}
+%   respectively, in particular for the second function the
+%   \meta{minimum} is $1$.  This is not yet available in \XeTeX{}.
+%   Assignments are always global.
+% \end{function}
+%
 % \subsection{Working with contents of integer arrays}
 %
 % \begin{function}[added = 2018-05-04, rEXP]{\intarray_const_from_clist:Nn}
