--- a/l3kernel/l3intarray.dtx
+++ b/l3kernel/l3intarray.dtx
@@ -222,6 +222,15 @@
 %
 % \subsection{Array items}
 %
+% \begin{macro}[EXP]{\@@_signed_max_dim:n}
+%   Used when an item to be stored is larger than \cs{c_max_dim} in
+%   absolute value; it is replaced by $\pm\cs{c_max_dim}$.
+%    \begin{macrocode}
+\cs_new:Npn \@@_signed_max_dim:n #1
+  { \int_value:w \int_compare:nNnT {#1} < 0 { - } \c_max_dim }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\@@_bounds:NNnTF, \@@_bounds_error:NNn}
 %   The functions \cs{intarray_gset:Nnn} and \cs{intarray_item:Nn} share
 %   bounds checking.  The |T| branch is used if |#3| is within bounds of
@@ -295,10 +304,8 @@
 \cs_new_protected:Npn \@@_gset_overflow:NNnn #1#2#3#4
   {
     \__kernel_msg_error:nnxxxx { kernel } { overflow }
-      { \token_to_str:N #2 } {#3} {#4}
-      { \int_value:w \int_compare:nNnT {#4} < 0 { - } \c_max_dim }
-    \__kernel_intarray_gset:Nnn #2 {#3}
-      { \int_value:w \int_compare:nNnT {#4} < 0 { - } \c_max_dim }
+      { \token_to_str:N #2 } {#3} {#4} {  \@@_signed_max_dim:n {#4} }
+    #1 #2 {#3} { \@@_signed_max_dim:n {#4} }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -431,6 +438,94 @@
           { \intarray_count:N #2 }
           { >~ \@@_to_clist:Nn #2 { , ~ } }
           { }
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Random arrays}
+%
+% \begin{macro}
+%   {
+%     \intarray_gset_rand:Nn,
+%     \intarray_gset_rand:Nnn,
+%     \@@_gset_rand:Nnn,
+%     \@@_gset_rand:Nff,
+%     \@@_gset_rand_auxi:Nnnn,
+%     \@@_gset_rand_auxii:Nnnn,
+%     \@@_gset_rand_auxiii:Nnnn,
+%     \@@_gset_all_same:Nn,
+%   }
+%   We only perform the bounds checks once.  This is done by two
+%   \cs{@@_gset_overflow_test:nw}, with an appropriate empty argument to
+%   avoid a spurious \enquote{at position \texttt{\#1}} part in the
+%   error message.  Then calculate the number of choices: this is at
+%   most $(2^{30}-1)-(-(2^{30}-1))+1=2^{31}-1$, which just barely does
+%   not overflow.  For small ranges use \cs{__kernel_randint:nn},
+%   otherwise use the (very much slower) floating point |randint|.
+%   Finally, if there are no random numbers do not define any of the
+%   auxiliaries.
+%    \begin{macrocode}
+\cs_new_protected:Npn \intarray_gset_rand:Nn #1
+  { \intarray_gset_rand:Nnn #1 { 1 } }
+\sys_if_rand_exist:TF
+  {
+    \cs_new_protected:Npn \intarray_gset_rand:Nnn #1#2#3
+      {
+        \@@_gset_rand:Nff #1
+          { \int_eval:n {#2} } { \int_eval:n {#3} }
+      }
+    \cs_new_protected:Npn \@@_gset_rand:Nnn #1#2#3
+      {
+        \int_compare:nNnTF {#2} > {#3}
+          {
+            \__kernel_msg_expandable_error:nnnn
+              { kernel } { randint-backward-range } {#2} {#3}
+            \@@_gset_rand:Nnn #1 {#3} {#2}
+          }
+          {
+            \@@_gset_overflow_test:nw {#2}
+            \@@_gset_rand_auxi:Nnnn #1 { } {#2} {#3}
+          }
+      }
+    \cs_generate_variant:Nn \@@_gset_rand:Nnn { Nff }
+    \cs_new_protected:Npn \@@_gset_rand_auxi:Nnnn #1#2#3#4
+      {
+        \@@_gset_overflow_test:nw {#4}
+        \@@_gset_rand_auxii:Nnnn #1 { } {#4} {#3}
+      }
+    \cs_new_protected:Npn \@@_gset_rand_auxii:Nnnn #1#2#3#4
+      {
+        \exp_args:NNf \@@_gset_rand_auxiii:Nnnn #1
+          { \int_eval:n { #3 - #4 + 1 } } {#4} {#3}
+      }
+    \cs_new_protected:Npn \@@_gset_rand_auxiii:Nnnn #1#2#3#4
+      {
+        \exp_args:NNf \@@_gset_all_same:Nn #1
+          {
+            \int_compare:nNnTF {#2} > \c__kernel_randint_max_int
+              { \exp_stop_f: \fp_to_int:n { randint(#3,#4) } }
+              {
+                \exp_stop_f:
+                \int_eval:n { \__kernel_randint:nn {#3} {#2} }
+              }
+          }
+      }
+    \cs_new_protected:Npn \@@_gset_all_same:Nn #1#2
+      {
+        \int_zero:N \l_@@_loop_int
+        \prg_replicate:nn { \intarray_count:N #1 }
+          {
+            \int_incr:N \l_@@_loop_int
+            \__kernel_intarray_gset:Nnn #1 \l_@@_loop_int {#2}
+          }
+      }
+  }
+  {
+    \cs_new_protected:Npn \intarray_gset_rand:Nnn #1#2#3
+      {
+        \__kernel_msg_error:nnn { kernel } { fp-no-random }
+          { \intarray_gset_rand:Nnn #1 {#2} {#3} }
       }
   }
 %    \end{macrocode}
