--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1711,7 +1711,8 @@
 \__kernel_msg_new:nnnn { kernel } { overflow }
   { Integers~larger~than~2^{30}-1~cannot~be~stored~in~arrays. }
   {
-    An~attempt~was~made~to~store~#3~at~position~#2~in~the~array~'#1'.~
+    An~attempt~was~made~to~store~#3~
+    \tl_if_empty:nF {#2} { at~position~#2~ } in~the~array~'#1'.~
     The~largest~allowed~value~#4~will~be~used~instead.
   }
 \__kernel_msg_new:nnnn { kernel } { out-of-bounds }
